[package]
name = "sia-fuse-rs"
version = "0.1.0"
edition = "2021"
authors = ["Mintu Gogoi <mintugogoi567@gmail.com>"]
description = "Native FUSE filesystem driver for Sia network"
license = "MIT"

[[bin]]
name = "sia-fuse"
path = "src/main.rs"

[dependencies]
# FUSE library (pure Rust)
fuser = "0.14"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = "0.4"

# Collections
parking_lot = "0.12"

# Database (for future use)
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# Cache (for future use)
lru = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
sqlite = ["rusqlite"]
cache = ["lru"]
